force-app/main/default/objects/QB_Account__c/QB_Account__c.object-meta.xml
<CustomObject>
    <label>QB Account</label>
    <nameField>
        <label>QB Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>