force-app/main/default/objects/QB_Account__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Clients__c</referenceTo>
    <relationshipLabel>QB Accounts</relationshipLabel>
    <relationshipName>QB_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>