force-app/main/default/objects/QB_Account__c/fields/QB_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>QB_Account_Id__c</fullName>
    <label>QB Account Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>