force-app/main/default/objects/QB_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>QB_Account_Id__c</columns>
    <columns>Client__c</columns>
    <columns>Jurisdiction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>